# haskell-flake-template

./: .gitignore  README.md  flake.nix  my-project.cabal  package.yaml  stack.yaml
src/: Greet.lhs  Greet.md  Main.hs
