cabal-version:       3.0
name:                my-project
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              my-name
maintainer:          my-email
build-type:          Simple
extra-source-files:  README.md

common warnings
    ghc-options: -Wall -Werror=incomplete-patterns

executable my-project
    import:             warnings
    main-is:            Main.hs
    other-extensions:   UnicodeSyntax
    build-depends:      base
    hs-source-dirs:     src
    default-language:   Haskell2010
