cabal-version:       3.0
name:                my-project
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              my-name
maintainer:          my-email
build-type:          Simple
extra-source-files:  README.md

common warnings
    -- remove `-pgmL markdown-unlit` if literate Markdown isn't needed
    ghc-options: -Wall -Werror=incomplete-patterns -pgmL markdown-unlit

executable my-project
    import:             warnings
    main-is:            Main.hs
    other-extensions:   UnicodeSyntax
    other-modules:      Greet
    build-depends:      base, markdown-unlit
    hs-source-dirs:     src
    default-language:   Haskell2010
    -- literate Mardown
    build-tool-depends: markdown-unlit:markdown-unlit
